15_istio_gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
    - "myapp.example.com"  # Same as Gateway
  gateways:
    - my-gateway           # Link to Gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: my-app
            port:
              number: 8080
